--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 alembic==0.9.6
 bleach==2.1.2
 blinker==1.4
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
+colorama==0.3.9
 dominate==2.3.1
 Faker==0.8.8
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.3
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
@@ -15,17 +19,22 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 html5lib==1.0.1
+httpie==0.9.9
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 Markdown==2.6.10
 MarkupSafe==1.0
+Pygments==2.2.0
 PyMySQL==0.8.0
 python-dateutil==2.6.1
 python-editor==1.0.3
+requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.1.15
 text-unidecode==1.1
+urllib3==1.22
 visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==0.13
